crates/plotnik-lib/tests/02-parser/recovery_incomplete/tagged_branch_missing_expression.txt
[Label:]
==== diagnostics ====
error: expected an expression
 --> query.ptk:1:8
  |
1 | [Label:]
  |        ^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
